# isotopia

./: .gitignore  Cargo.toml  README.md
migrations/: 20250617001719_build_requests.up.sql  20250702225745_download_count.down.sql  20250702225745_download_count.up.sql  20250811033354_img_md5sum.down.sql  20250811033354_img_md5sum.up.sql  20260204000000_device_fairphone_fp5.down.sql  20260204000000_device_fairphone_fp5.up.sql  20260223000000_build_error.down.sql  20260223000000_build_error.up.sql
src/: alarm.rs  api.rs  cache.rs  db.rs  main.rs
