[package]
name = "isotopia"
version = "0.1.0"
description = "ALARM iso buildserver"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/isotopia"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.7.0"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
